--- a/static/css/header.css
+++ b/static/css/header.css
@@ -100,6 +100,65 @@ header img {
     width: 11.875rem;
     padding: 0.75rem 0;
 }
+/* /////////////// */
+/* @import url("https://fonts.googleapis.com/css?family=DM+Sans:500,700&display=swap");
+
+.nav {
+    display: inline-flex;
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
+    background-color: #ffde59;
+    padding: 0 20px;
+    border-radius: 40px;
+
+    
+}
+
+.nav-item {
+    color: white;
+    padding: 20px;
+    text-decoration: none;
+    transition: 0.3s;
+    margin: 0 6px;
+    z-index: 1;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 500;
+    position: relative;
+}
+
+.nav-item:before {
+    content: "";
+    position: absolute;
+    bottom: -6px;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-color: #dfe2ea;
+    border-radius: 8px 8px 0 0;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.nav-item:not(.is-active):hover:before {
+    opacity: 1;
+    bottom: 0;
+}
+
+.nav-item:not(.is-active):hover {
+    color: #333;
+}
+
+.nav-indicator {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 4px;
+    transition: 0.4s;
+    height: 5px;
+    z-index: 1;
+    border-radius: 8px 8px 0 0;
+} */
 
 header nav ul {
     display: flex;
@@ -148,11 +207,10 @@ header nav ul li:hover a:after {
 
 header nav ul li:last-child {
     margin-right: 0;
-    /* 마지막 메뉴의 간격을 없앰 */
 }
 
 header nav ul li:last-child {
-    margin-right: 0; /* 마지막 메뉴의 간격을 없앰 */
+    margin-right: 0;
 }
 
 .search {
