--- a/views/include/head.ejs
+++ b/views/include/head.ejs
@@ -19,4 +19,9 @@
 <link rel="stylesheet" href="/static/css/footer.css" />
 
 <!-- 브라우저 상단 LOGO -->
-<link rel="icon" type="images/png" href="/static/images/CMM-circle.png">
+<link rel="icon" type="images/png" href="/static/images/CMM-circle.png" />
+
+<!-- google fonts  -->
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet" />
