--- a/static/css/restDetail.css
+++ b/static/css/restDetail.css
@@ -3,6 +3,9 @@ main {
     flex-direction: column;
     align-items: center;
     padding-top: 200px;
+    font-family: "Gowun Dodum", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .rest {
