--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,5 +1,11 @@
 @import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
 
+body {
+    font-family: "Gowun Dodum", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 :root {
     /** color **/
     --baseColor: #333;
