--- a/views/suggestions/suggestionList.ejs
+++ b/views/suggestions/suggestionList.ejs
@@ -8,7 +8,7 @@
         <%- include('../include/head.ejs') %>
     </head>
     <body>
-        <%- include('../include/header.ejs', {isLogin, user}) %>
+        <%- include('../include/header.ejs',{isLogin, user}) %>
         <div class="main-container">
             <h2>건의사항</h2>
             <br>
@@ -55,9 +55,19 @@
                     </ul>
                 </nav>
                 <div class="btn-div">
-                    <a href="/suggestion/write"><button type="button" class="btn btn-info">글쓰기</button></a>
+                    <button type="button" class="btn btn-info" onclick="writePage('<%- isLogin %>')">글쓰기</button>
                 </div>
             </div>
         </div>
+        <%- include('../include/footer.ejs') %>
+        <script>
+            function writePage(isLogin){
+                if(isLogin=="true"){
+                    window.location.href='/suggestion/write'
+                }else{
+                    alert("로그인 후에 이용 가능합니다.");
+                }
+            }
+        </script>
     </body>
 </html>
