--- a/static/css/restDetail.css
+++ b/static/css/restDetail.css
@@ -37,7 +37,7 @@ main {
 .restTitle {
     display: flex;
     justify-content: space-between;
-    height: 100px;
+    height: 65px;
     line-height: 100px;
 }
 
@@ -56,6 +56,7 @@ main {
 }
 
 .timeAndNum {
+    width: 535px;
     border: 1px solid lightgray;
     border-radius: 25px;
     padding: 10px;
