--- a/views/mypage/reviewList.ejs
+++ b/views/mypage/reviewList.ejs
@@ -37,7 +37,7 @@
                         <% for (let j = 0; j < reviewList[i].review_rating; j++) { %>
                             <i
                                 id="filledStar"
-                                class="fa-solid fa-star fa-2xl"
+                                class="fa-solid fa-star fa-xl"
                                 style="color: #FFD43B"
                             >
                             </i>
