--- a/views/mypage/reviewList.ejs
+++ b/views/mypage/reviewList.ejs
@@ -13,8 +13,14 @@
         <%- include('../include/header'), {isLogin: isLogin, user: user} %> <%-
         include('../include/mypageNav', { title: "내 리뷰 목록" }) %>
         <% try { %>
-        <main>
+        <% if(reviewList.length === 0) { %>
+        <main style="height: 400px;">
             <hr style="border: 3px solid#878787; height: 3px !important; display: block !important; width: 100% !important; "/>
+            <h2 style="width: 1350px; text-align: center;" >등록하신 리뷰가 없습니다.</h2>
+        <% } else { %>
+        <main>
+        <hr style="border: 3px solid#878787; height: 3px !important; display: block !important; width: 100% !important; "/>
+        <% } %>
             <% for (let i=0; i<reviewList.length; i++) { %>
             <div class="review">
                 <div class="rest">
@@ -61,7 +67,10 @@
             <% } %>
         </main>
         <% }  catch(err) { %>
-            <h1>세션이 만료되었습니다. 다시 로그인해주세요.</h1>
+            <script>
+                alert("세션이 만료되었습니다. 다시 로그인 해주세요.")
+                window.location.href = "/";
+            </script>
         <% }%>
         <%-include('../include/footer') %>
     </body>
