--- a/views/mypage/reviewDetail.ejs
+++ b/views/mypage/reviewDetail.ejs
@@ -55,7 +55,10 @@
             </div>
         </main>
         <% } catch(err) { %>
-        <h1>세션이 만료되었습니다. 다시 로그인해주세요.</h1>
+        <script>
+            alert("세션이 만료되었습니다. 다시 로그인 해주세요.");
+            window.location.href = "/";
+        </script>
         <% }%> <%-include('../include/footer') %>
     </body>
 </html>
